# time-logging

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
ios/: project.yml
ios/TimeLogger/: ContentView.swift  Info.plist  TimeLogger.entitlements  TimeLoggerApp.swift
ios/TimeLogger.xcodeproj/: project.pbxproj
ios/TimeLogger/Models/: ActiveTimerLocal.swift  BreakPeriod.swift  DeviceIdentity.swift  PendingDeletion.swift  SyncMetadata.swift  TimeEntryLocal.swift  TodoItemLocal.swift
ios/TimeLogger/Networking/: BLEManager.swift  CloudKitManager.swift  HTTPClient.swift  PeerDiscovery.swift  ServerSelection.swift  (+1 more)
ios/TimeLoggerWidgetsiOS/: Info.plist  Shared.swift  TimeLoggerWidgets.swift  TimerAppIntents.swift  TimerLiveActivity.swift  TimerWidget.swift
macos/: project.yml  tl-info.plist
macos/TimeLogger/: ContentView.swift  Info.plist  TimeLogger.entitlements  TimeLoggerApp.swift
macos/TimeLoggerMac.xcodeproj/: project.pbxproj
macos/TimeLoggerWidgets/: TimeLoggerWidgets.entitlements  TimeLoggerWidgetsBundle.swift
proto/: time_logging.proto
src/: api.rs  ble.rs  ble_peripheral.h  ble_peripheral.m  icloud.rs  icloud_sync.h  icloud_sync.m  main.rs  mdns.rs  models.rs  server.rs  state.rs  sync.rs  timer.rs  todo.rs  tui.rs
tools/: generate_icons.swift
watchos/: SETUP.md  TimeLoggerWidgetExtension-Info.plist  TimeLoggerWidgetExtension.entitlements  project.yml
watchos/TimeLogger Watch App/: ContentView.swift  Info.plist  TimeLoggerApp.swift
watchos/TimeLogger.xcodeproj/: project.pbxproj
watchos/TimeLoggerWidget/: TimeLoggerWidget.swift
(+61 files in other folders)
