[package]
name = "tl"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
chrono = "0.4.43"
dialoguer = "0.12.0"
dirs = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
prost = "0.14.3"

[build-dependencies]
prost-build = "0.14.3"
