[package]
name = "tl"
version = "0.1.0"
edition = "2024"

[features]
default = ["serve", "tui"]
serve = ["axum", "tokio", "tower-http", "serde_json", "uuid", "libmdns"]
tui = ["ratatui", "crossterm"]
ble = ["serve", "cc"]
icloud = ["serve", "cc"]

[dependencies]
clap = { version = "4.5.59", features = ["derive"] }
chrono = { version = "0.4.43", features = ["serde"] }
dialoguer = "0.12.0"
dirs = "6.0.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
prost = "0.14.3"
serde = { version = "1", features = ["derive"] }

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }

axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
serde_json = { version = "1", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }
libmdns = { version = "0.9", optional = true }

[build-dependencies]
prost-build = "0.14.3"
cc = { version = "1", optional = true }
